--- a/esb_app/src/esb/Makefile
+++ b/esb_app/src/esb/Makefile
@@ -1,5 +1,5 @@
-SQL_FUN     =  ../DB-ACCESS/insertion.c ../DB-ACCESS/check_all_routes.c ../DB-ACCESS/check_transport.c ../DB-ACCESS/check_transform.c ../DB-ACCESS/db_connection.h
-XML_FUN = ../BMD/xml_parsing.c ../BMD/xml_header.h ../BMD/validate_request.c ../BMD/bmd_parse_main.c
+SQL_FUN     =  ../DB-ACCESS/db_connection.h ../DB-ACCESS/insertion.c ../DB-ACCESS/check_all_routes.c ../DB-ACCESS/check_transport.c ../DB-ACCESS/check_transform.c 
+XML_FUN = ../BMD/xml_parsing.c ../BMD/validate_request.c ../BMD/bmd_parse_main.c
 LIBXML     =   `xml2-config --libs` `xml2-config --cflags`
 LIBSQL     =  `mysql_config --cflags --libs`
 esb:  esb.c 
